# seekit

./: .codecov.yml  .editorconfig  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh.md  SECURITY.md  codecov.yml  install.sh  rustfmt.toml
.cargo/: config.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
.trae/rules/: always-apply.mdc  engine.mdc
deploy/: docker-compose.yml
deploy/searxng/: settings.yml
docs/: MANUAL.md  MANUAL.zh.md
docs/adr/: DESIGN.md
homebrew/Formula/: seekit.rb
src/: cache.rs  cli.rs  config.rs  error.rs  fetcher.rs  lib.rs  main.rs  mcp.rs  output.rs  repl.rs
src/engine/: bing.rs  brave.rs  duckduckgo.rs  fusion.rs  google.rs  mod.rs  searxng.rs  trait.rs
tests/: integration_test.rs
